Move code into a single module